set progress bar with timer

--- a/Sevenminuitworkout/app/src/main/res/values/strings.xml
+++ b/Sevenminuitworkout/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Seven minuit workout</string>
     <string name="start">START</string>
+    <string name="get_ready_for">GET READY FOR</string>
 </resources>
