--- a/Sevenminuitworkout/app/src/main/res/values/strings.xml
+++ b/Sevenminuitworkout/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="start">START</string>
     <string name="get_ready_for">GET READY FOR</string>
     <string name="upcoming_exercise">Upcoming Exercise</string>
+    <string name="calculator">Calculate</string>
 </resources>
